Fixed overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,7 @@
     --themeDotBorder:#24292e;
 
     --previewBg:rgb(251, 249, 243, 0.8);
+    --previewShadow:#f0ead6;
 }
 
 html, body {
@@ -202,6 +203,19 @@ background-color: #fff;
 
 .right-column{
     grid-area: right-column;
+    display: grid;
+    align-content: center;
+
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#preview-shadow{
+     background-color: var(--previewShadow);
+     width: 300px;
+     height: 180px;
+     padding-left: 30px;
+     padding-top: 30px;
 }
 
 #preview{
@@ -242,9 +256,23 @@ background-color: #fff;
 }
   
 @media screen and (max-width: 1200px){
-       .main-container {
+      .main-container{
         width: 95%;
-       
-    }
-  
+      }
+}
+
+@media screen and (max-width: 800px){
+    .intro-wrapper {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+             'nav-wrapper'
+             'left-column'
+              'right-column'
+        ;
+ }
+    
+.right-column{
+    justify-content: center;
+}
+
 }
